--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
