.env.example: Updated example env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-PORT=
+PORT
 
 MYSQL_HOST=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_DATABASE=
+MYSQL_PORT=
+MYSQL_USER
+MYSQL_PASSWORD
+MYSQL_DATABASE
+MYSQL_SEED_DATA
