--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "main": "sever.js",
   "scripts": {
     "build": "tsc && npm run copy-sql",
-    "dev": "tsc && npm run copy-sql && node --watch --env-file=.env dist/server.js",
+    "dev": "nodemon",
     "start": "node --env-file=.env dist/server.js",
-    "copy-sql": "rm -rf dist/database/schema && cp -r src/database/schema dist/database/schema"
+    "copy-sql": "rm -rf dist/database/schema && cp -r src/database/schema dist/database/schema",
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "mysql2": "^3.14.1"
@@ -30,7 +31,9 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.0",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
