--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "tsc && npm run copy-sql",
     "dev": "nodemon",
     "start": "node dist/server.js",
-    "copy-sql": "rm -rf dist/database/schema && cp -r src/database/schema dist/database/schema",
+    "copy-sql": "rm -rf dist/database/schema && cp -r src/database/schema dist/database/schema"
   },
   "dependencies": {
     "cors": "^2.8.5",
