--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT
 
 MYSQL_HOST=
 MYSQL_PORT=
-MYSQL_USER
-MYSQL_PASSWORD
-MYSQL_DATABASE
-MYSQL_SEED_DATA
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_SEED_DATA=
