--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "dev": "nodemon",
-    "start": "node --env-file=.env dist/server.js",
+    "start": "node dist/server.js",
     "copy-sql": "rm -rf dist/database/schema && cp -r src/database/schema dist/database/schema"
   },
   "dependencies": {
