--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,18 @@
 { 
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Node 22",
+  "_version": "22.0.0",
+
   "compilerOptions": {
-    "module": "NodeNext",
-    "target": "ES6",
+    "lib": ["es2024", "ESNext.Array", "ESNext.Collection", "ESNext.Iterator"],
+    "module": "nodenext",
+    "target": "es2022",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "moduleResolution": "node16"
   },
   "include": [ "src/**/*" ],
   "exclude": [ "node_modules", "dist" ]
