package.json: Adding mocking libraries

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,14 @@
 
   "compilerOptions": {
     "lib": ["es2024", "ESNext.Array", "ESNext.Collection", "ESNext.Iterator"],
-    "module": "nodenext",
+    "module": "es2022",
     "target": "es2022",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "Node"
   },
   "include": [ "src/**/*" ],
   "exclude": [ "node_modules", "dist" ]
