--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@types/node": "^24.0.0",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.0",
+    "node-mocks-http": "^1.17.2",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
+    "ts-jest-mock-import-meta": "^1.3.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
